fixing workflow bug

--- a/.github/workflows/backendTest.yml
+++ b/.github/workflows/backendTest.yml
@@ -23,4 +23,4 @@ jobs:
           python-version: '3.x'
       # You can test your matrix by printing the current Python version
       - name: Display Python version
-        run: python test_get_visitor_count.py"
+        run: "python test_get_visitor_count.py"
