--- a/.github/workflows/backendTest.yml
+++ b/.github/workflows/backendTest.yml
@@ -21,7 +21,10 @@ jobs:
         with:
           # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
-      # You can test your matrix by printing the current Python version
-      - name: Display Python version
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Python Backend Test
         working-directory: ./Backend
         run: python test_get_visitor_count.py
