--- a/.github/workflows/backendTest.yml
+++ b/.github/workflows/backendTest.yml
@@ -11,7 +11,7 @@ on:
       - master
 
 jobs:
-  build:
+  backend-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,6 +22,7 @@ jobs:
           # Semantic version range syntax or exact version of a Python version
           python-version: '3.x'
       - name: Install dependencies
+        working-directory: ./Backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
