--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,79 +1,35 @@
-astroid==2.4.2
-beautifulsoup4==4.9.3
+attr==0.3.2
 boto3==1.28.58
-botocore==1.31.58
-cached-property==1.5.2
-certifi==2020.11.8
-cffi==1.16.0
-chardet==3.0.4
-charset-normalizer==3.3.0
-click==7.1.2
-cloudpickle==1.6.0
+brotli==1.1.0
+brotlicffi==1.1.0.0
+ConfigParser==6.0.0
+contextlib2==21.6.0
 cryptography==41.0.4
-cycler==0.10.0
-decorator==4.4.2
-elasticsearch==7.10.0
-frozendict==2.0.6
-ftfy==5.8
-genanki==0.11.0
-gym==0.17.3
-gym-retro==0.8.0
-idna==2.10
-imageio==2.9.0
-imageio-ffmpeg==0.4.2
-isort==5.6.4
+Cython==3.0.5
+dl==0.1.0
+docutils==0.20.1
+filelock==3.13.1
+HTMLParser==0.0.2
+importlib_metadata==6.8.0
+ipython==8.17.2
+ipywidgets==8.1.1
 Jinja2==3.1.2
-jmespath==1.0.1
-joblib==0.17.0
-kiwisolver==1.3.1
-lazy-object-proxy==1.4.3
-MarkupSafe==2.1.3
-matplotlib==3.3.3
-mccabe==0.6.1
+jnius==1.1.0
+keyring==24.2.0
+mock==5.1.0
 moto==4.2.5
-moviepy==1.0.3
-natsort==7.1.0
-networkx==2.5
-nltk==3.5
 numpy==1.19.4
-oauthlib==3.1.0
-opencv-python==4.4.0.46
-pandas==1.1.5
+ordereddict==1.1
 Pillow==8.0.1
-PorterStemmer==0.5
-proglog==0.1.9
-progress==1.5
-pycparser==2.21
-pyglet==1.5.11
-pylint==2.6.0
-PyOpenGL==3.1.5
-PyOpenGL-accelerate==3.1.5
-pyparsing==2.4.7
-PySocks==1.7.1
-pystache==0.5.4
-python-dateutil==2.8.1
-pytz==2020.4
-PyYAML==5.4.1
-regex==2020.11.13
-requests==2.31.0
-requests-oauthlib==1.3.0
-responses==0.23.3
-rope==0.18.0
-s3transfer==0.7.0
-scikit-learn==0.23.2
-scipy==1.5.4
-six==1.15.0
-sklearn==0.0
-soupsieve==2.0.1
-textblob==0.15.3
-threadpoolctl==2.1.0
-toml==0.10.2
-tqdm==4.53.0
-tweepy==3.9.0
-types-PyYAML==6.0.12.12
-url-normalize==1.4.3
-urllib3==1.26.2
-wcwidth==0.2.5
-Werkzeug==3.0.0
-wrapt==1.12.1
-xmltodict==0.13.0
+Pillow==10.1.0
+protobuf==4.25.0
+pyOpenSSL==23.3.0
+railroad==0.5.0
+redis==5.0.1
+simplejson==3.19.2
+Sphinx==7.2.6
+tornado==6.3.3
+urllib3_secure_extra==0.1.0
+wincertstore==0.2.1
+xmlrpclib==1.0.1
+zstandard==0.22.0
