--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,35 +1,3 @@
-attr==0.3.2
 boto3==1.28.58
-brotli==1.1.0
-brotlicffi==1.1.0.0
-ConfigParser==6.0.0
-contextlib2==21.6.0
-cryptography==41.0.4
-Cython==3.0.5
-dl==0.1.0
-docutils==0.20.1
-filelock==3.13.1
-HTMLParser==0.0.2
-importlib_metadata==6.8.0
-ipython==8.17.2
-ipywidgets==8.1.1
-Jinja2==3.1.2
-jnius==1.1.0
-keyring==24.2.0
-mock==5.1.0
 moto==4.2.5
-numpy==1.19.4
-ordereddict==1.1
-Pillow==8.0.1
-Pillow==10.1.0
-protobuf==4.25.0
-pyOpenSSL==23.3.0
-railroad==0.5.0
-redis==5.0.1
-simplejson==3.19.2
-Sphinx==7.2.6
-tornado==6.3.3
-urllib3_secure_extra==0.1.0
-wincertstore==0.2.1
-xmlrpclib==1.0.1
-zstandard==0.22.0
+Requests==2.31.0
