--- a/.github/workflows/deployWithTerraform.yml
+++ b/.github/workflows/deployWithTerraform.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 permissions:
   id-token: write
@@ -63,26 +66,3 @@ jobs:
         working-directory: ./terraform
         run: terraform apply -auto-approve
     needs: zip-handler
-
-  push-to-s3:
-    runs-on: ubuntu-latest
-    env:
-      AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      region: "us-east-1"
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          role-to-assume: arn:aws:iam::829475484955:role/github-actions
-          aws-region: us-east-1
-
-      - name: Push to S3
-        env:
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-        run: |
-          aws s3 sync ./Frontend s3://$BUCKET_NAME --delete
-        
