--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,11 @@ on:
   pull_request:
     branches:
       - master
+  workflow_run:
+    workflows: 
+      -Deploy with Terraform
+    type:
+      - complete
 
 jobs:
   backend-test:
