fixing not on a branch error

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,9 @@ jobs:
   front-end-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - name: setup Python
         # This is the version of the action for setting up Python, not the Python version.
         uses: actions/setup-python@v4
