--- a/.github/workflows/deployWithTerraform.yml
+++ b/.github/workflows/deployWithTerraform.yml
@@ -18,7 +18,10 @@ jobs:
   zip-handler:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        ref: ${{ github.event.pull_request.head.ref }}
+
       - name: Zip Folder
         working-directory: ./Backend
         run: zip ../terraform/getVisitorCount.zip getVisitorCount.py
