--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
       - master
   workflow_run:
     workflows: 
-      -Deploy with Terraform
+      - Deploy With Terraform
     type:
       - complete
 
