--- a/.github/workflows/deployWithTerraform.yml
+++ b/.github/workflows/deployWithTerraform.yml
@@ -20,7 +20,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-        ref: ${{ github.event.pull_request.head.ref }}
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Zip Folder
         working-directory: ./Backend
