--- a/.github/workflows/deployWithTerraform.yml
+++ b/.github/workflows/deployWithTerraform.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           git config --global user.name "Github Actions"
           git config --global user.email "${{ env.LOGIN_EMAIL }}"
+          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/JakeMittleman/cloud-resume-challenge
 
           git add -A
           git commit -m "Zipping file via github actions"
