--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,14 +1,16 @@
-name: Backend Test
-run-name: Backend Test
+name: Tests
+run-name: Tests
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+  workflow_run:
+    workflows: 
+      - Deploy With Terraform
+    type:
+      - complete
+
+permissions:
+  contents: write
 
 jobs:
   backend-test:
@@ -32,7 +34,9 @@ jobs:
   front-end-test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
       - name: setup Python
         # This is the version of the action for setting up Python, not the Python version.
         uses: actions/setup-python@v4
