--- a/.github/workflows/uploadToS3.yml
+++ b/.github/workflows/uploadToS3.yml
@@ -10,25 +10,26 @@ on:
       - complete
 
 jobs:
-  runs-on: ubuntu-latest
-  env:
-    AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-    AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-    region: "us-east-1"
-  steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.head.ref }}
-
-     - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+  upload-to-s3:
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
+      region: "us-east-1"
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
         with:
-          role-to-assume: arn:aws:iam::829475484955:role/github-actions
-          aws-region: us-east-1
+          ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Push to S3
-        run: |
-          aws s3 sync ./Frontend s3://$BUCKET_NAME --delete
-          
+      - name: Configure AWS credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            role-to-assume: arn:aws:iam::829475484955:role/github-actions
+            aws-region: us-east-1
+
+        - name: Push to S3
+          run: |
+            aws s3 sync ./Frontend s3://$BUCKET_NAME --delete
+
