adding permissions for id-token

--- a/.github/workflows/uploadToS3.yml
+++ b/.github/workflows/uploadToS3.yml
@@ -17,6 +17,9 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
       region: "us-east-1"
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
