--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,17 +6,16 @@ on:
   workflow_run:
     workflows: 
       - Deploy With Terraform
-    type:
+    types:
       - complete
-
-permissions:
-  contents: write
 
 jobs:
   backend-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
       - name: setup Python
         # This is the version of the action for setting up Python, not the Python version.
         uses: actions/setup-python@v4
@@ -36,6 +35,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_branch }}
 
       - name: setup Python
         # This is the version of the action for setting up Python, not the Python version.
